LFD-78 [Server] Create Entities also created Service Layer for Entities and implemented those Services in the Managers